--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -14,7 +14,7 @@
 \fancyfoot[C]{\thepage}
 \title{\huge Door Alarm System on Raspberry Pi 4}
 \author{Angelo Barbera}
-\date{2023}
+\date{February 20, 2023}
 
 \begin{document}
 
