--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -728,7 +728,7 @@ HEX
             CLEAR SEND_COMMAND
             DOOR CLOSED SEND_WORD SEND_WORD    \ Sends words to LCD
         THEN
-    0 UNTIL
+    AGAIN
 ;
 
 \end{verbatim}
