--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -27,7 +27,9 @@
 	{\huge\bfseries Door Alarm System on Raspberry Pi 4 \par}
 	\vspace{2cm}
 	\vfill
-	{\large Angelo Barbera 2023 \par}
+	{\large Angelo Barbera\par}
+    \vspace{0.2cm}
+    {\large February 20, 2023\par}
 \end{titlepage}
 
 \pagenumbering{roman}
